
- #2127: Refactor lookup functions
  Included observable changes:
    - makes the location of usage warnings and alerts for constructors more
      precise
    - don't warn about a constructor never being used to build values when it
      has been defined as private
  (Leo White, review by Thomas Refis)

- #8885: Warn about unused local modules
  (Thomas Refis, review by Alain Frisch)

### Build system:

- #8650: ensure that "make" variables are defined before use;
  revise generation of config/util.ml to better quote special characters
  (Xavier Leroy, review by David Allsopp)

- #8690, #8696: avoid rebuilding the world when files containing primitives
  change.
  (Stephen Dolan, review by Gabriel Scherer, Sébastien Hinderer and
   Thomas Refis)

- #8837: build manpages using ocamldoc.opt when available
  cuts the manpages build time from 14s to 4s
  (Gabriel Scherer, review by David Allsopp and Sébastien Hinderer,
   report by David Allsopp)

- #8843, #8841: fix use of off_t on 32-bit systems.
  (Stephen Dolan, report by Richard Jones, review by Xavier Leroy)

- #8947: fix/improve support for the BFD library
  (Sébastien Hinderer, review by Damien Doligez)

### Compiler user-interface and warnings:

- #8702, #8777: improved error messages for fixed row polymorphic variants
  (Florian Angeletti, report by Leo White, review by Thomas Refis)

- #8874: add tests for typechecking error messages and pack them into
  pretty-printing boxes.
  (Oxana Kostikova, review by Gabriel Scherer)

- #8914: clarify the warning on unboxable types used in external primitives (61)
  (Gabriel Scherer, review by Florian Angeletti, report on the Discourse forum)

### Bug fixes:

- #7925, #8611: fix error highlighting for exceptionally
  long toplevel phrases
  (Kyle Miller, reported by Armaël Guéneau, review by Armaël Guéneau
   and Nicolás Ojeda Bär)

- #8622: Don't generate #! headers over 127 characters.
  (David Allsopp, review by Xavier Leroy and Stephen Dolan)
