@@ -144,6 +144,7 @@ module type Bytecomp_options = sig
   val _make_runtime : unit -> unit
   val _vmthread : unit -> unit
   val _use_runtime : string -> unit
+  val _output_complete_exe : unit -> unit
 
   val _dinstr : unit -> unit
   val _dcamlprimc : unit -> unit
