@@ -78,6 +78,7 @@ module Options = Main_args.Make_bytecomp_options (struct
   let _open = ignore
   let _output_obj = ignore
   let _output_complete_obj = ignore
+  let _output_complete_exe = ignore
   let _pack = ignore
   let _plugin = ignore
   let _pp _ = incompatible "-pp"
